--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,71 +1,67 @@
 <div class="accueil">
-        <h1>Notre matériel en location</h1>
-        <div class="container">
-            <div class="row g-3 d-flex justify-content-center">
-                <div class="col-12 col-md-5">
-                    <div class="card card-first">
-                        <img [src]="cheminPhotoOrdi" alt="Photo de l'ordinateur" class="card-img-top"/>
-                        <div class="card-body">
-                            <h2 class="card-title">Ordinateur</h2>
-                                <ul class="card-text">
-                                    <li>Modèle: Lenovo V15-ITL</li>
-                                    <li>RAM: 8Go</li>
-                                    <li>Disque dur: 256 Go SSD</li>
-                                    <li>Processeur: Intel Core i5-1135G7 </li>
-                                    <li>Logiciels et pilotes: Windows</li>
-                                </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-5">
-                    <div class="card pb-5">
-                        <img [src]="cheminCasqueVR" alt="Photo du casque VR" class="card-img-top"/>
-                        <div class="card-body">
-                            <h2 class="card-title">Casque VR</h2>
+    <h1>Notre matériel en location</h1>
+    <div class="container">
+        <div class="row g-3 d-flex justify-content-center">
+            <div class="col-12 col-md-5">
+                <div class="card card-first">
+                    <img [src]="cheminPhotoOrdi" alt="Photo de l'ordinateur" class="card-img-top"/>
+                    <div class="card-body">
+                        <h2 class="card-title">Ordinateur</h2>
                             <ul class="card-text">
-                                <li>Modèle: Oculus Quest 2</li>
-                                <li>Connectivité: HDMI, USB 2.0, USB 3.0</li>
-                                <li>Ecran: Oled</li>
+                                <li>Modèle: Lenovo V15-ITL</li>
+                                <li>RAM: 8Go</li>
+                                <li>Disque dur: 256 Go SSD</li>
+                                <li>Processeur: Intel Core i5-1135G7 </li>
+                                <li>Logiciels et pilotes: Windows</li>
+                                <li> <a href="https://pcsupport.lenovo.com/ht/fr/products/laptops-and-netbooks/lenovo-v-series-laptops/v15-g2-itl" target="_blank">Guide d'utilisation</a></li>
                             </ul>
-                        </div>
                     </div>
                 </div>
             </div>
-        
-            <div class="row g-3 d-flex justify-content-center mt-4">
-                <div class="col-12 col-md-5">
-                    <div class="card card-first">
-                        <img [src]="cheminWebcam" alt="Photo de la webcam" class="card-img-top"/>
-                        <div class="card-body">
-                            <h2 class="card-title">Webcam</h2>
-                            <ul class="card-text">
-                                <li>Modèle: Webcam C920 HD pro</li>
-                                <li>Résolution: 15 mégapixels</li>
-                                <li>Poids: 800 grammes</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-5">
-                    <div class="card">
-                        <img [src]="cheminProjecteur" alt="Photo du vidéo projecteur" class="card-img-top"/>
-                        <div class="card-body">
-                            <h2 class="card-title">Vidéo projecteur</h2>
-                            <ul class="card-text">
-                                <li>Modèle: Epson EB-685wi</li>
-                                <li>Connectivité: VGA, USB, Ethernet, HDMI</li>
-                                <li>Résolution: 1280 * 800</li>
-                            </ul>
-                        </div>
+            <div class="col-12 col-md-5">
+                <div class="card pb-5">
+                    <img [src]="cheminCasqueVR" alt="Photo du casque VR" class="card-img-top"/>
+                    <div class="card-body">
+                        <h2 class="card-title">Casque VR</h2>
+                        <ul class="card-text">
+                            <li>Modèle: Oculus Quest 2</li>
+                            <li>Connectivité: HDMI, USB 2.0, USB 3.0</li>
+                            <li>Ecran: Oled</li>
+                            <li> <a href="https://manuals.plus/fr/logitech/logitech-oculus-quest-2-pro-gaming-headset-manual#axzz7Vtfz1pLS" target="_blank">Guide d'utilisation</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-    </div>
+        </div>
     
-
-
-
-
-
-
-
+        <div class="row g-3 d-flex justify-content-center mt-4">
+            <div class="col-12 col-md-5">
+                <div class="card card-first">
+                    <img [src]="cheminWebcam" alt="Photo de la webcam" class="card-img-top"/>
+                    <div class="card-body">
+                        <h2 class="card-title">Webcam</h2>
+                        <ul class="card-text">
+                            <li>Modèle: Webcam C920 HD pro</li>
+                            <li>Résolution: 15 mégapixels</li>
+                            <li>Poids: 800 grammes</li>
+                            <li> <a href="https://manuals.plus/fr/logitech/c920-hd-pro-webcam-manual#axzz7Vtfz1pLS" target="_blank">Guide d'utilisation</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-5">
+                <div class="card">
+                    <img [src]="cheminProjecteur" alt="Photo du vidéo projecteur" class="card-img-top"/>
+                    <div class="card-body">
+                        <h2 class="card-title">Vidéo projecteur</h2>
+                        <ul class="card-text">
+                            <li>Modèle: Epson EB-685wi</li>
+                            <li>Connectivité: VGA, USB, Ethernet, HDMI</li>
+                            <li>Résolution: 1280 * 800</li>
+                            <li> <a href="https://files.support.epson.com/docid/cpd5/cpd50664.pdf" target="_blank">Guide d'utilisation</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
